# CEssentials

./: CMakeLists.txt  README.MD
Clases/Clase 01/: main.c  main01.c
Clases/Clase 02 - Arrays/: CMakeLists.txt  ejercicio08.c  ejercicio10.c
Clases/Clase 03/: Clase 03.rar
Exercises/T4-Ex/: ejercicio01.c  ejercicio02.c  ejercicio04.c  ejercicio06.c  ejercicio08.c  ejercicio09.c  ejercicio10.c  ejercicio14.c  ejercicio15.c
Exercises/T5-Ex01/: T5-Ex01.c
Exercises/T5-Ex02/: T5-Ex02.c
Exercises/T5-Ex03/: T5-Ex03.c
Exercises/T5-Ex04/: T5-Ex04.c
Exercises/T5-Ex05/: T5-Ex05.c
Exercises/T5-Ex06/: main.c  vector.c
Exercises/T5-Ex07/: main.c  vector.c  vector.h
Exercises/T5-Ex08/: T5-Ex08.c
Exercises/T5-Ex09/: complejos.c  complejos.h  main.c
Exercises/T5-Ex10/: main.c  racionales.c  racionales.h
Practica/: CMakeLists.txt  main.c  racionales.c
Practica/v0/: calculadora.c  main.c
Practica/v1.clase/: CMakeLists.txt  calculadora.c  calculadora.h  main.c
Practica/v1.tests/: CMakeLists.txt  calculadora.c  calculadora.h  main.c
Practica/v2.clase/: Organizacion.txt  Practicav2.rar  fracciones.c  fracciones.h  main.c
PracticasT4/: ejercicio03.c  ejercicio04.c  ejercicio05.c  ejercicio07.c  ejercicio11.c  ejercicio12.c  ejercicio13.c  ejercicio16.c
arrays/: T6-EJ 08-09-10.rar
arrays/EJ13 - TriangulosMatriz/: CMakeLists.txt  main.c
arrays/EJ14 - MultiplicaMatriz/: CMakeLists.txt  main.c
arrays/ListaNumeros/: CMakeLists.txt  (+1 more)
memoryKiller/: CMakeLists.txt  main.c
pointers/: main-Ej5.c  main-Ej7.c  main01.c  main02.c  pointers.c
strings/: strings.c
(+42 files in other folders)
